# cognitive-robotics-coursework

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json  requirements.txt  setup.cfg
src/: main.py  resnet.py
